v1.1/markdown/ref-organs/skin-female.md
# 3D Reference Organ for Skin, Female v1.1

### Description
[This reference organ](https://humanatlas.io/3d-reference-library) was created using data from the Visible Human Female, provided by the National Library of Medicine.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Kristen Browne |
| **Creator ORCID:** | [0000-0003-4066-7531](https://orcid.org/0000-0003-4066-7531) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Fiona Ginty | 
| **Reviewer ORCID(s):** |[0000-0001-6638-683X](https://doi.org/10.5072/0000-0001-6638-683X) |
| **Date:** | 2021-12-01 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM555.MQLF.923 |
| **3D Data:** | [Skin, Female v1.1](https://hubmapconsortium.github.io/ccf-releases/v1.1/models/VH_F_Skin.glb) |
| **DOI:** | [https://doi.org/10.48539/HBM555.MQLF.923](https://doi.org/10.48539/HBM555.MQLF.923) |
| **How to Cite This 3D Data:** | Kristen Browne. 2021. *3D Reference Organ for Skin, Female v1.1.* [https://doi.org/10.48539/HBM555.MQLF.923](https://doi.org/10.48539/HBM555.MQLF.923). Accessed on December 1, 2021. |
| **How to Cite 3D Data Overall:** | Browne, Kristen, Leonard E. Cross, Bruce W. Herr II, Lisel Record, Ellen Quardokus, Andreas Bueckle, Katy B&ouml;rner. 2021. *HuBMAP CCF 3D Reference Object Library*. https://humanatlas.io/3d-reference-library. Accessed on December 1, 2021. |
