v1.2/markdown/ref-organs/skin-female.md
# 3D Reference Organ for Skin, Female v1.2

### Description
[This reference organ](https://hubmapconsortium.github.io/ccf/pages/ccf-3d-reference-library.html) was created using data from the Visible Human Female, provided by the National Library of Medicine.The torso of the skin model was moved up from previous editions to incorporate the clavicles and other anatomy for the breast. It was also adjusted to add space for the triceps surae and the ankle bones for the eventual addition of the triceps surae muscles and landmark organs. 


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Kristen Browne; Heidi Schlehlein |
| **Creator ORCID:** | [0000-0003-4066-7531](https://orcid.org/0000-0003-4066-7531); [0000-0002-3333-5646](https://orcid.org/0000-0002-3333-5646)|
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Fiona Ginty | 
| **Reviewer ORCID(s):** |[0000-0001-6638-683X](https://doi.org/10.5072/0000-0001-6638-683X) |
| **Date:** | 2022-05-06 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM254.DVTN.589 |
| **3D Data:** | [Skin, Female v1.2](https://hubmapconsortium.github.io/ccf-releases/v1.2/models/VH_F_Skin.glb) |
| **DOI:** | [https://doi.org/10.48539/HBM254.DVTN.589](https://doi.org/10.48539/HBM254.DVTN.589) |
| **How to Cite This 3D Data:** | Kristen Browne; Heidi Schlehlein 2022. *3D Reference Organ for Skin, Female v1.2.* [https://doi.org/10.48539/HBM254.DVTN.589](https://doi.org/10.48539/HBM254.DVTN.589). Accessed on May 06, 2022. |
| **How to Cite 3D Data Overall:** | Kristen Browne, Heidi Schlehlein, Bruce W. Herr II, Ellen Quardokus, Andreas Bueckle, Katy B&ouml;rner. 2021. *HuBMAP CCF 3D Reference Object Library*. https://hubmapconsortium.github.io/ccf/pages/ccf-3d-reference-library.html. Accessed on May 06, 2022. |
